deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
